--- a/个人资料.html
+++ b/个人资料.html
@@ -258,46 +258,57 @@
                 <div class="content_c">
                     <div class="myhome clearfix">
                         <div class="mymenu">
+                            <div class="myjf">
+                                <a href="#" title="">
+                                    <i></i>
+                                    <div class="myjf_c">
+                                        <div class="myjf_t">我的袜酷</div>
+                                        <div class="myjf_b">MY WAKU</div>
+                                    </div>
+                                    <em></em>
+                                </a>
+                            </div>
+
                             <h3>会员中心</h3>
                             <ul>
                                 <li>
-                                    <a href="#" title="所有订单">所有订单</a>
+                                    <a href="#" title="我的订单">我的订单</a>
                                 </li>
-                                <li>
+                                <li >
                                     <a href="#" title="我的收藏">我的收藏</a>
                                 </li>
-                                <li>
+                                <li >
                                     <a href="#" title="为我推荐">为我推荐</a>
                                 </li>
-                                <li>
-                                    <a href="#" title="我的评价">我的评价</a>
+                                <li >
+                                    <a href="#" title="">我的评价</a>
                                 </li>
                             </ul>
                             <h3>账户管理</h3>
                             <ul>
-                                <li class="menu_on">
-                                    <a href="#" title="个人资料">个人资料</a>
+                                <li >
+                                    <a href="#" title="">个人资料设置</a>
                                 </li>
-                                <li>
-                                    <a href="#" title="账户安全">账户安全</a>
+                                <li >
+                                    <a href="#" title="">账户安全设置</a>
                                 </li>
-                                <li>
-                                    <a href="#" title="收货地址">收货地址</a>
+                                <li >
+                                    <a href="#" title="">收货地址管理</a>
                                 </li>
                             </ul>
                             <h3>服务中心</h3>
                             <ul>
-                                <li>
-                                    <a href="#" title="退货管理">退货管理</a>
+                                <li >
+                                    <a href="#">退货管理</a>
                                 </li>
-                                <li>
-                                    <a href="#" title="商品咨询/回复">商品咨询/回复</a>
+                                <li >
+                                    <a href="#" title="">商品咨询/回复</a>
                                 </li>
-                                <li>
-                                    <a href="#" title="申请留言/投诉">申请留言/投诉</a>
+                                <li >
+                                    <a href="#" title="">申请留言/投诉</a>
                                 </li>
-                                <li>
-                                    <a href="#" title="留言/投诉管理">留言/投诉管理</a>
+                                <li >
+                                    <a href="#" title="">留言/投诉管理</a>
                                 </li>
                             </ul>
                         </div>
