--- a/我的收藏.html
+++ b/我的收藏.html
@@ -66,7 +66,7 @@
                                 <span>|</span>
                             </li>
                             <li class="top_cart">
-                                
+
                                 <a href="#" title="购物车"class="top_ap">
                                     <i class="icon_cart"></i>
                                     购物车<em>0</em>
@@ -78,7 +78,7 @@
                                         购物车中暂时还没有商品，赶紧去选购吧
                                     </div> -->
                                     <ul class="dd">
-                                        
+
                                         <li class="clearfix">
                                             <div class="dd_box">
                                                 <a href="#" title=""><img src="images/pic_01.jpg" alt="" /></a>
@@ -258,25 +258,27 @@
                 <div class="content_c">
                     <div class="myhome clearfix">
                         <div class="mymenu">
+                            <div class="myjf">
+                                <a href="#" title="">
+                                    <i></i>
+                                    <div class="myjf_c">
+                                        <div class="myjf_t">我的袜酷</div>
+                                        <div class="myjf_b">MY WAKU</div>
+                                    </div>
+                                    <em></em>
+                                </a>
+                            </div>
+
                             <h3>会员中心</h3>
                             <ul>
                                 <li>
                                     <a href="#" title="我的订单">我的订单</a>
                                 </li>
-                                <li class="menu_on">
+                                <li >
                                     <a href="#" title="我的收藏">我的收藏</a>
                                 </li>
                                 <li >
                                     <a href="#" title="为我推荐">为我推荐</a>
-                                </li>
-                                <li >
-                                    <a href="#" title="">我的拍卖</a>
-                                </li>
-                                <li >
-                                    <a href="#" title="">我的团购</a>
-                                </li>
-                                <li >
-                                    <a href="#" title="">我的秒杀</a>
                                 </li>
                                 <li >
                                     <a href="#" title="">我的评价</a>
@@ -431,6 +433,18 @@
                                         </td>
                                     </tr>
                                 </table>
+                                <div style="background:#fff;padding:20px 0;">
+                                    <!-- 分页 -->
+                                    <div class="paging">
+                                        <span>上一页</span>
+                                        <em>1</em>
+                                        <a href="#" title="">2</a>
+                                        <a href="#" title="">3</a>
+                                        <a href="#" title="">4</a>
+                                        <a href="#" title="">5</a>
+                                        <a href="#" title="">下一页</a>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
