--- a/订单详情.html
+++ b/订单详情.html
@@ -66,7 +66,7 @@
                                 <span>|</span>
                             </li>
                             <li class="top_cart">
-                                
+
                                 <a href="#" title="购物车"class="top_ap">
                                     <i class="icon_cart"></i>
                                     购物车<em>0</em>
@@ -78,7 +78,7 @@
                                         购物车中暂时还没有商品，赶紧去选购吧
                                     </div> -->
                                     <ul class="dd">
-                                        
+
                                         <li class="clearfix">
                                             <div class="dd_box">
                                                 <a href="#" title=""><img src="images/pic_01.jpg" alt="" /></a>
@@ -258,9 +258,20 @@
                 <div class="content_c">
                     <div class="myhome clearfix">
                         <div class="mymenu">
+                            <div class="myjf">
+                                <a href="#" title="">
+                                    <i></i>
+                                    <div class="myjf_c">
+                                        <div class="myjf_t">我的袜酷</div>
+                                        <div class="myjf_b">MY WAKU</div>
+                                    </div>
+                                    <em></em>
+                                </a>
+                            </div>
+
                             <h3>会员中心</h3>
                             <ul>
-                                <li class="menu_on">
+                                <li>
                                     <a href="#" title="我的订单">我的订单</a>
                                 </li>
                                 <li >
@@ -268,15 +279,6 @@
                                 </li>
                                 <li >
                                     <a href="#" title="为我推荐">为我推荐</a>
-                                </li>
-                                <li >
-                                    <a href="#" title="">我的拍卖</a>
-                                </li>
-                                <li >
-                                    <a href="#" title="">我的团购</a>
-                                </li>
-                                <li >
-                                    <a href="#" title="">我的秒杀</a>
                                 </li>
                                 <li >
                                     <a href="#" title="">我的评价</a>
@@ -302,10 +304,10 @@
                                 <li >
                                     <a href="#" title="">商品咨询/回复</a>
                                 </li>
-                                <li >
+                                <li>
                                     <a href="#" title="">申请留言/投诉</a>
                                 </li>
-                                <li >
+                                <li class="menu_on">
                                     <a href="#" title="">留言/投诉管理</a>
                                 </li>
                             </ul>
